--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Abdelrahman sameh & ahmed salah",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
