--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index"
+    "start": "node index"
   },
   "author": "abdelrahman sameh & ahmed salah",
   "license": "ISC",
